<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout2">




    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:id="@+id/textView_duration"
            android:textSize="@dimen/abc_text_size_large_material"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:text="@string/zero"
            android:id="@+id/edit_duration_min"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:id="@+id/textView_min"
            android:textSize="@dimen/abc_text_size_small_material"/>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <EditText
            android:layout_marginLeft="100dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/zero_point_zero"
            android:ems="10"
            android:id="@+id/edit_duration_sec"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:id="@+id/textView_sec"
            android:textSize="@dimen/abc_text_size_small_material"/>

    </LinearLayout>


<LinearLayout
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayout"
    android:layout_marginTop="15dp">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView_distance"
        android:text="@string/distance"
        android:textSize="@dimen/abc_text_size_large_material"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_distance"
        android:text="@string/zero"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_meters"
        android:text="@string/meters"
        android:textSize="@dimen/abc_text_size_small_material"/>

</LinearLayout>
        <DatePicker
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePickerEnter"
            android:calendarViewShown="false"/>
    </LinearLayout>

<!--    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date"
        android:id="@+id/textView_date"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />-->

 <!--   <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText_date"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView_date"
        android:layout_toEndOf="@+id/textView_date" />-->

</RelativeLayout>