<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/from"
        android:id="@+id/textVieWFrom"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/to"
        android:id="@+id/textViewTo"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/buttonOkChosePeriod"
        android:onClick="goToHistoryActivityFromChoosing"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePickerFrom"
        android:spinnersShown="false"
        android:scaleY="0.7"
        android:scaleX="0.7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePickerTo"
        android:spinnersShown="false"
        android:scaleY="0.7"
        android:scaleX="0.7"
        android:layout_above="@+id/buttonOkChosePeriod"
        android:layout_alignLeft="@+id/datePickerFrom"
        android:layout_alignStart="@+id/datePickerFrom" />
</RelativeLayout>